# equine

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Jenkinsfile  LICENSE  LICENSE.md  README.md  SPDX.spdx  conftest.py  equine_gp.py  index.html  index.md  llm_equine_experiments.ipynb  mkdocs.yml  objects.inv  protonet_save_load_no_feature_and_label_names.eq  pyproject.toml  setup.cfg  setup.py  test_equine_gp.py
.github/: dependabot.yml
.github/workflows/: Tests.yml  gh-pages.yml  python-package.yml  python-publish.yml
CONTRIBUTING/: CONTRIBUTING.md  index.html
LICENSE/: index.html
coverage/: class_index.html  function_index.html  index.html  status.json  z_25e814848c54336d___init___py.html  z_25e814848c54336d_equine_gp_py.html  z_25e814848c54336d_equine_output_py.html  z_25e814848c54336d_equine_protonet_py.html  z_25e814848c54336d_equine_py.html  z_25e814848c54336d_load_equine_model_py.html  z_25e814848c54336d_utils_py.html  z_48b9f513cfc27170___init___py.html  z_48b9f513cfc27170__version_py.html  z_48b9f513cfc27170_equine_gp_py.html  z_48b9f513cfc27170_equine_output_py.html  z_48b9f513cfc27170_equine_protonet_py.html  z_48b9f513cfc27170_equine_py.html  z_48b9f513cfc27170_load_equine_model_py.html  z_48b9f513cfc27170_utils_py.html  z_573a020213b1129f___init___py.html  z_573a020213b1129f__version_py.html  z_573a020213b1129f_equine_gp_py.html  z_573a020213b1129f_equine_output_py.html  z_573a020213b1129f_equine_protonet_py.html  z_573a020213b1129f_equine_py.html  z_573a020213b1129f_load_equine_model_py.html  z_573a020213b1129f_utils_py.html  z_70cee741301ed1d9___init___py.html  z_70cee741301ed1d9__version_py.html  z_70cee741301ed1d9_equine_gp_py.html  z_70cee741301ed1d9_equine_output_py.html  z_70cee741301ed1d9_equine_protonet_py.html  z_70cee741301ed1d9_equine_py.html  z_70cee741301ed1d9_load_equine_model_py.html  z_70cee741301ed1d9_utils_py.html
coverage_info/: index.html
docs/: CONTRIBUTING.md  LICENSE.md  coverage_info.md  index.md
docs/example_notebooks/: .gitignore  MNIST_OOD_detection.ipynb  toy_example_EquineProtonet.ipynb  toy_example_GP.ipynb  vnat_example.ipynb
example_notebooks/MNIST_OOD_detection/: MNIST_OOD_detection.ipynb  index.html
example_notebooks/toy_example_EquineProtonet/: index.html
example_notebooks/toy_example_GP/: index.html  toy_example_GP.ipynb
example_notebooks/vnat_example/: index.html
gen_ref_nav/: index.html
reference/SUMMARY/: SUMMARY.md  index.html
reference/equine/: index.html  index.md
reference/equine/_version/: _version.md  index.html
reference/equine/equine/: equine.md  index.html
reference/equine/equine_gp/: equine_gp.md  index.html
reference/equine/equine_output/: equine_output.md  index.html
reference/equine/equine_protonet/: equine_protonet.md  index.html
reference/equine/load_equine_model/: index.html  load_equine_model.md
reference/equine/utils/: index.html  utils.md
search/: search_index.json
src/equine/: __init__.py  equine.py  equine_gp.py  equine_output.py  equine_protonet.py  load_equine_model.py  utils.py
tests/: NOTICE.txt  conftest.py  test_equine.py  test_equine_gp.py  test_equine_integration.py  test_equine_protonet.py  test_utils.py
